--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,14 +23,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.3.0",
     "mongoose": "^6.7.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.8.0",
-    "sharp": "^0.31.2",
-    "slugify": "^1.6.5",
-    "uniqid": "^5.4.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.5",
+    "nodemon": "^2.0.20",
+    "typescript": "^5.3.3"
   }
 }
