--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ecommerce",
+  "name": "indieware",
   "version": "1.0.0",
-  "description": "",
+  "description": "IndieWare web app",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/index.ts",
+    "dev": "nodemon src/index.js",
     "build": "npm install && tsc"
   },
-  "author": "",
+  "author": "Ajit Dhdharia",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -27,15 +27,6 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.11.5",
-    "@types/validator": "^13.11.8",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "nodemon": "^2.0.20"
   }
 }
