--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prettier": "^3.2.4"
   }
 }
