--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^1.32.0",
+    "cloudinary": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.3.0",
     "mongoose": "^6.7.2",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
